# tink-rust

./: .gitignore  README.md  WORKSPACE
aead/: Cargo.toml  README.md
aead/src/: aead_factory.rs  kms_envelope_aead.rs
cargo/: BUILD.bazel  Cargo.toml  crates.bzl  fake_lib.rs
cargo/remote/: BUILD.anyhow-1.0.32.bazel  BUILD.block-buffer-0.9.0.bazel  BUILD.cpuid-bool-0.1.2.bazel  BUILD.either-1.6.0.bazel  BUILD.generic-array-0.14.4.bazel  BUILD.getrandom-0.1.14.bazel  BUILD.hkdf-0.9.0.bazel  BUILD.hmac-0.8.1.bazel  BUILD.itertools-0.8.2.bazel  BUILD.itoa-0.4.6.bazel  BUILD.libc-0.2.74.bazel  BUILD.opaque-debug-0.3.0.bazel  BUILD.ppv-lite86-0.2.8.bazel  BUILD.proc-macro2-1.0.19.bazel  BUILD.prost-0.6.1.bazel  BUILD.prost-derive-0.6.1.bazel  BUILD.quote-1.0.7.bazel  BUILD.rand-0.7.3.bazel  BUILD.rand_chacha-0.2.2.bazel  BUILD.rand_core-0.5.1.bazel  BUILD.ryu-1.0.5.bazel  BUILD.serde-1.0.117.bazel  BUILD.serde_json-1.0.59.bazel  BUILD.sha-1-0.9.1.bazel  BUILD.sha2-0.9.1.bazel  BUILD.subtle-2.3.0.bazel  BUILD.syn-1.0.38.bazel  BUILD.typenum-1.12.0.bazel
core/: CHANGELOG.md  Cargo.toml
core/src/: aead.rs  deterministic_aead.rs  hybrid_decrypt.rs  hybrid_encrypt.rs
daead/: Cargo.toml  README.md
daead/src/: subtle.rs
docs/: PRIMITIVES.md
integration/awskms/: Cargo.toml
integration/gcpkms/: Cargo.toml
mac/: Cargo.toml
prf/: Cargo.toml
proto/: Cargo.toml
proto/proto/: test_proto.proto
rinkey/src/: main.rs
signature/: Cargo.toml
streaming/: Cargo.toml  README.md
testing/: Cargo.toml
tests/: Cargo.toml
testutil/: Cargo.toml
tink/: Cargo.toml
(+47 files in other folders)
